--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
             name="description"
             content="Стоматология, косметология, медицинские анализы"
         />
+        <meta
+            name="keywords"
+            content="стоматология, медицинские анализы, косметология, медицина, клин, лабораторные исследования, пцр, брекеты, зубы, лечение, клиника, ортодонт, имплантолог"
+        />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <title>МеДДента</title>
