--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
-        <meta
-            name="description"
-            content="Стоматология, косметология, медицинские анализы"
-        />
-        <meta
-            name="keywords"
-            content="стоматология, медицинские анализы, косметология, медицина, клин, лабораторные исследования, пцр, брекеты, зубы, лечение, клиника, ортодонт, имплантолог"
-        />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <title>МеДДента</title>
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
-    </body>
+<html lang="ru-RU">
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+    <meta name="theme-color" content="#000000"/>
+
+    <title>МеДДента</title>
+    <meta name="description" content="Стоматология, косметология, медицинские анализы"/>
+    <meta name="keywords"
+          content="стоматология, медицинские анализы, косметология, медицина, клин, лабораторные исследования, пцр, брекеты, зубы, лечение, клиника, ортодонт, имплантолог"/>
+
+    <meta property="og:title" content="Клиника «МеДДента»">
+    <meta property="og:description" content="Стоматология, косметология, медицинские анализы в Клину">
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg">
+
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
+</head>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
+</body>
 </html>
